--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@google-cloud/storage": "^7.17.3",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "dotenv": "^17.2.3",
-    "firebase-admin": "^13.6.0",
+    "firebase": "^12.8.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
