--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@google-cloud/storage": "^7.17.3",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "firebase": "^12.8.0",
+    "pino": "^10.3.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@typescript-eslint/parser": "^8.53.1",
     "@vitest/ui": "^4.0.18",
     "eslint": "^9.39.2",
+    "pino-pretty": "^13.1.3",
     "tsx": "^4.20.6",
     "typescript": "^5",
     "typescript-eslint": "^8.53.1",
