--- a/package.json
+++ b/package.json
@@ -11,7 +11,19 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "mcp:start": "pm2 start ecosystem.config.cjs",
+    "mcp:stop": "pm2 stop pistachio-mcp",
+    "mcp:restart": "pm2 restart pistachio-mcp",
+    "mcp:logs": "pm2 logs pistachio-mcp",
+    "mcp:status": "pm2 status",
+    "mcp:delete": "pm2 delete pistachio-mcp",
+    "rclone:start": "pm2 start ecosystem.config.cjs --only rclone-webdav",
+    "rclone:stop": "pm2 stop rclone-webdav",
+    "rclone:restart": "pm2 restart rclone-webdav",
+    "rclone:logs": "pm2 logs rclone-webdav",
+    "rclone:status": "pm2 describe rclone-webdav",
+    "rclone:delete": "pm2 delete rclone-webdav"
   },
   "keywords": [
     "mcp",
@@ -34,6 +46,7 @@
     "@vitest/ui": "^4.0.18",
     "eslint": "^9.39.2",
     "pino-pretty": "^13.1.3",
+    "pm2": "^6.0.14",
     "tsx": "^4.20.6",
     "typescript": "^5",
     "typescript-eslint": "^8.53.1",
